plugins {
    java
}

group = "me.ehsan"
version = "1.0.0"

repositories {
    mavenCentral()
    maven("https://repo.papermc.io/repository/maven-public/")
    maven("https://repo.extendedclip.com/content/repositories/placeholderapi/")
}

dependencies {
    compileOnly("io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT")
    compileOnly("net.kyori:adventure-text-minimessage:4.14.0")
    compileOnly("me.clip:placeholderapi:2.11.6")
    // Matches plugin.yml's `libraries:` entry - Paper downloads this at runtime,
    // we only need it here for compilation.
    compileOnly("org.xerial:sqlite-jdbc:3.46.1.0")
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
}